--- a/Customer-support-bot.ipynb
+++ b/Customer-support-bot.ipynb
@@ -25,6 +25,8 @@
     "import shutil\n",
     "import sqlite3\n",
     "\n",
+    "import sklearn\n",
+    "\n",
     "\n",
     "import pandas as pd\n",
     "import requests\n",
