--- a/Customer-support-bot.ipynb
+++ b/Customer-support-bot.ipynb
@@ -16,16 +16,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "import dotenv\n",
     "from dotenv import load_dotenv\n",
     "import shutil\n",
     "import sqlite3\n",
-    "\n",
-    "import sklearn\n",
     "\n",
     "\n",
     "import pandas as pd\n",
@@ -1649,8 +1648,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "llm",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
