--- a/Customer-support-bot.ipynb
+++ b/Customer-support-bot.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,9 @@
     "from langgraph.graph import END, StateGraph\n",
     "from langgraph.prebuilt import tools_condition\n",
     "\n",
-    "from IPython.display import Image, display"
+    "from IPython.display import Image, display\n",
+    "import shutil\n",
+    "import uuid"
    ]
   },
   {
@@ -86,7 +88,7 @@
    ],
    "source": [
     "os.environ['LANGCHAIN_TRACING_V2'] = 'true'\n",
-    "os.environ['LANGCHAIN_ENDPOINT'] = 'https://api.smith.langchain.com'\n",
+    "os.environ['LANGCHAIN_PROJECT'] = 'Customer Support Bot Tutorial'\n",
     "load_dotenv()"
    ]
   },
@@ -104,9 +106,9 @@
    "outputs": [],
    "source": [
     "db_url = \"https://storage.googleapis.com/benchmarks-artifacts/travel-db/travel2.sqlite\"\n",
-    "local_file = '/Users/azamatkuzdibayev/train/llm/data/travel.sqlite'\n",
+    "local_file = '/Users/azamatkuzdibayev/train/llm/projects/data/travel.sqlite'\n",
     "# The backup lets us restart for each tutrial section\n",
-    "backup_file = '/Users/azamatkuzdibayev/train/llm/data/travel.backup.sqlite'\n",
+    "backup_file = '/Users/azamatkuzdibayev/train/llm/projects/data/travel.backup.sqlite'\n",
     "overwrite = False\n",
     "if overwrite or not os.path.exists(local_file):\n",
     "    response = requests.get(db_url)\n",
@@ -121,7 +123,7 @@
     "\n",
     "tables = pd.read_sql(\n",
     "    \"SELECT name FROM sqlite_master WHERE type='table';\", conn\n",
-    ").name.to_list()\n",
+    ").name.tolist()\n",
     "tdf = {}\n",
     "for t in tables:\n",
     "    tdf[t] = pd.read_sql(f\"SELECT * FROM {t}\", conn)\n",
@@ -137,7 +139,7 @@
     ")\n",
     "\n",
     "datetime_columns = ['scheduled_departure', \n",
-    "                    \"actual_arrival\",\n",
+    "                    \"scheduled_arrival\",\n",
     "                    \"actual_departure\",\n",
     "                    \"actual_arrival\",\n",
     "                    ]\n",
@@ -174,26 +176,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.get(\n",
-    "    \"https://storage.googleapis.com/benchmarks-artifacts/travel-db/swiss_faq.md\"\n",
-    ")\n",
+    "response = requests.get('https://storage.googleapis.com/benchmarks-artifacts/travel-db/swiss_faq.md')\n",
     "response.raise_for_status()\n",
     "faq_text = response.text\n",
     "\n",
-    "docs = [{\"page_content\": txt} for txt in re.split(r\"(?=\\n##)\", faq_text)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "response = requests.get('https://storage.googleapis.com/benchmarks-artifacts/travel-db/swiss_faq.md')\n",
-    "response.raise_for_status()\n",
-    "fag_text = response.text\n",
-    "\n",
-    "docs = [{\"page_content\": txt} for txt in re.split(r\"(?=\\n##)\", fag_text)]\n",
+    "docs = [{\"page_content\": txt} for txt in re.split(r\"(?=\\n##)\", faq_text)]\n",
     "\n",
     "class VectorStoreRetriever:\n",
     "    def __init__(self, docs: list, vectors: list, oai_client):\n",
@@ -942,7 +929,7 @@
     "    if right is None:\n",
     "        return left\n",
     "    if right == 'pop':\n",
-    "        return left[-1]\n",
+    "        return left[:-1]\n",
     "    return left + [right]\n",
     "\n",
     "class State(TypedDict):\n",
@@ -994,7 +981,7 @@
     "                state = {**state, 'messages': messages}\n",
     "            else:\n",
     "                break\n",
-    "            return {'messages: result'}\n",
+    "        return {'messages: result'}\n",
     "class CompleteOrEscalate(BaseModel):\n",
     "    \"\"\"A tool to mark the current taask as completed \n",
     "       and/or to escalate control of the dialog to the main assistant,\n",
@@ -1103,8 +1090,8 @@
     ").partial(time=datetime.now())\n",
     "\n",
     "book_car_rental_safe_tools = [search_car_rentals]\n",
-    "book_cat_rental_sensitive_tools = [book_car_rental, update_car_rental, cancel_car_rental]\n",
-    "book_car_rental_tools = book_car_rental_safe_tools + book_cat_rental_sensitive_tools\n",
+    "book_car_rental_sensitive_tools = [book_car_rental, update_car_rental, cancel_car_rental]\n",
+    "book_car_rental_tools = book_car_rental_safe_tools + book_car_rental_sensitive_tools\n",
     "book_car_rental_runnable = book_car_rental_prompt | llm.bind_tools(\n",
     "    book_car_rental_tools + [CompleteOrEscalate]\n",
     ")\n",
@@ -1265,7 +1252,7 @@
    "source": [
     "def create_entry_node(assistant_name: str, new_dialog_state: str) -> Callable:\n",
     "    def entry_node(state: State) -> dict:\n",
-    "        tool_call_id = state['message'][-1].tool_calls[0]['id']\n",
+    "        tool_call_id = state['messages'][-1].tool_calls[0]['id']\n",
     "        return{\n",
     "            'messages': [\n",
     "                ToolMessage(\n",
@@ -1327,6 +1314,8 @@
     "builder.add_node(\"update_flight_sensitive_tools\",\n",
     "                 create_tool_node_with_fallback(update_flight_sensitive_tools),\n",
     "                 )\n",
+    "builder.add_node(\"update_flight_safe_tools\",\n",
+    "                 create_tool_node_with_fallback(update_flight_safe_tools))\n",
     "def route_update_flight(\n",
     "        state: State,\n",
     ") -> Literal[\n",
@@ -1363,7 +1352,7 @@
     "        messages.append(\n",
     "            ToolMessage(\n",
     "            content=\"Resuming dialog with the host assistant. Please reflect on the past conversation and assist the user as needed.\",\n",
-    "            tool_call_id=state['messages'][-1].tool_calls[-1]['id'],\n",
+    "            tool_call_id=state['messages'][-1].tool_calls[0]['id'],\n",
     "\n",
     "            )\n",
     "        )\n",
@@ -1402,10 +1391,11 @@
     ")\n",
     "builder.add_node(\n",
     "    \"book_car_rental_sensitive_tools\",\n",
-    "    create_tool_node_with_fallback(book_cat_rental_sensitive_tools),\n",
+    "    create_tool_node_with_fallback(book_car_rental_sensitive_tools),  \n",
     ")\n",
+    "\n",
     "def route_book_car_rental(\n",
-    "        state: State,\n",
+    "    state: State,\n",
     ") -> Literal[\n",
     "    \"book_car_rental_safe_tools\",\n",
     "    \"book_car_rental_sensitive_tools\",\n",
@@ -1415,18 +1405,18 @@
     "    route = tools_condition(state)\n",
     "    if route == END:\n",
     "        return END\n",
-    "    tool_calls = state['messages'][-1].tool_calls\n",
-    "    did_cancel = any(tc['name'] == CompleteOrEscalate.__name__ for tc in tool_calls)\n",
+    "    tool_calls = state[\"messages\"][-1].tool_calls\n",
+    "    did_cancel = any(tc[\"name\"] == CompleteOrEscalate.__name__ for tc in tool_calls)\n",
     "    if did_cancel:\n",
     "        return \"leave_skill\"\n",
-    "    safe_toolnames = [t.name for t in book_hotel_safe_tools]\n",
-    "    if all(tc['name'] in safe_toolnames for tc in tool_calls):\n",
+    "    safe_toolnames = [t.name for t in book_car_rental_safe_tools]  \n",
+    "    if all(tc[\"name\"] in safe_toolnames for tc in tool_calls):\n",
     "        return \"book_car_rental_safe_tools\"\n",
     "    return \"book_car_rental_sensitive_tools\"\n",
     "\n",
     "builder.add_edge(\"book_car_rental_sensitive_tools\", \"book_car_rental\")\n",
     "builder.add_edge(\"book_car_rental_safe_tools\", \"book_car_rental\")\n",
-    "builder.add_conditional_edges(\"book_car_rental\", route_book_car_rental)"
+    "builder.add_conditional_edges(\"book_car_rental\", route_book_car_rental)\n"
    ]
   },
   {
@@ -1645,6 +1635,109 @@
     "    # This requires some extra depencies and is optional\n",
     "    pass"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conversation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'backup_file' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 19\u001b[0m\n\u001b[1;32m      1\u001b[0m tutorial_questions \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m      2\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHi there, what time is my flight?\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m      3\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAm i allowed to update my flight to something sooner? I want to leave later today.\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     15\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mOK great pick one and book it for my second day there.\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     16\u001b[0m ]\n\u001b[1;32m     18\u001b[0m \u001b[38;5;66;03m# Update with the backup file so we can restart from the original place in each section\u001b[39;00m\n\u001b[0;32m---> 19\u001b[0m shutil\u001b[38;5;241m.\u001b[39mcopy(\u001b[43mbackup_file\u001b[49m, db)\n\u001b[1;32m     20\u001b[0m thread_id \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mstr\u001b[39m(uuid\u001b[38;5;241m.\u001b[39muuid4())\n\u001b[1;32m     22\u001b[0m config \u001b[38;5;241m=\u001b[39m {\n\u001b[1;32m     23\u001b[0m     \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mconfigurable\u001b[39m\u001b[38;5;124m\"\u001b[39m: {\n\u001b[1;32m     24\u001b[0m         \u001b[38;5;66;03m# The passenger_id is used in our flight tools to \u001b[39;00m\n\u001b[1;32m     25\u001b[0m     }\n\u001b[1;32m     26\u001b[0m }\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'backup_file' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "tutorial_questions = [\n",
+    "    \"Hi there, what time is my flight?\",\n",
+    "    \"Am i allowed to update my flight to something sooner? I want to leave later today.\",\n",
+    "    \"Update my flight to sometime next week then\",\n",
+    "    \"The next available option is great\",\n",
+    "    \"what about lodging and transportation?\",\n",
+    "    \"Yeah i think i'd like an affordable hotel for my week-long stay (7 days). And I'll want to rent a car.\",\n",
+    "    \"OK could you place a reservation for your recommended hotel? It sounds nice.\",\n",
+    "    \"yes go ahead and book anything that's moderate expense and has availability.\",\n",
+    "    \"Now for a car, what are my options?\",\n",
+    "    \"Awesome let's just get the cheapest option. Go ahead and book for 7 days\",\n",
+    "    \"Cool so now what recommendations do you have on excursions?\",\n",
+    "    \"Are they available while I'm there?\",\n",
+    "    \"interesting - i like the museums, what options are there? \",\n",
+    "    \"OK great pick one and book it for my second day there.\",\n",
+    "]\n",
+    "\n",
+    "# Update with the backup file so we can restart from the original place in each section\n",
+    "shutil.copy(backup_file, db)\n",
+    "thread_id = str(uuid.uuid4())\n",
+    "\n",
+    "config = {\n",
+    "    \"configurable\": {\n",
+    "        # The passenger_id is used in our flight tools to \n",
+    "        # fetch the user's flight information\n",
+    "        \"passenger_id\": \"3442 587242\",\n",
+    "        # Checkpoints are accessed by thread_id\n",
+    "        \"thread_id\": thread_id,\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "_printed = set()\n",
+    "# We can reuse the tutorial questions from part 1 to see how it does.\n",
+    "for question in tutorial_questions:\n",
+    "    events = part_4_graph.stream(\n",
+    "        {\"message:\": (\"user\", question)}, config, stream_mode=\"values\"\n",
+    "    )\n",
+    "    for event in events:\n",
+    "        _print_event(event, _printed)\n",
+    "    snapshot = part_4_graph.get_state(config)\n",
+    "    while snapshot.next:\n",
+    "        # We have and interrupt! The agent is trying to use a tool, and the user can approve or deny it\n",
+    "        # Note: This code is all outside of your graph. Typically, you would stream the output to a UI.\n",
+    "        # Then, you would have the frontend trigger a new run via an API call when the user has provided input.\n",
+    "        user_input = input(\n",
+    "            \"Do you approve of the above actions? Type 'y' continue;\"\n",
+    "            \"otherwise, explain your requested changed.\\n\\n\"\n",
+    "        )\n",
+    "        if user_input.strip() == \"y\":\n",
+    "            # Just continue\n",
+    "            result = part_4_graph.invoke(\n",
+    "                None,\n",
+    "                config,\n",
+    "            )\n",
+    "        else:\n",
+    "            # Satisfy the tool invocation by\n",
+    "            # providing instructions on the requested changes / change of mind\n",
+    "            result = part_4_graph.invoke(\n",
+    "                {\n",
+    "                    \"message\": [\n",
+    "                        ToolMessage(\n",
+    "                            tool_call_id=event['messages'][-1].tool_calls[0][\"id\"],\n",
+    "                            content=f\"API call denied by user. Reasoning: '{user_input}' . Continue assisting, accounting for the user's input.\",\n",
+    "                        )\n",
+    "                    ]\n",
+    "                },\n",
+    "                config,\n",
+    "            )\n",
+    "        snapshot = part_4_graph.get_state(config)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
