--- a/code_example.ipynb
+++ b/code_example.ipynb
@@ -43,6 +43,26 @@
     "result = chain.run(user_input)\n",
     "print(result)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.agents import initialize_agent, load_tools\n",
+    "from langchain.llms import OpenAI\n",
+    "\n",
+    "# Загрузка инструмента и модели\n",
+    "llm = OpenAI(api_key=\"your-api-key\")\n",
+    "tools = load_tools([\"serpapi\", \"llm\"], llm=llm)\n",
+    "\n",
+    "# Инициализация агента\n",
+    "agent = initialize_agent(tools, llm, agent=\"zero-shot-react-description\", verbose=True)\n",
+    "\n",
+    "# Использование агента для выполнения задачи\n",
+    "agent.run(\"Какова высота Эвереста?\")\n"
+   ]
   }
  ],
  "metadata": {
