--- a/code_example.ipynb
+++ b/code_example.ipynb
@@ -41,7 +41,44 @@
     "# Использование цепочки\n",
     "user_input = \"Привет, как дела?\"\n",
     "result = chain.run(user_input)\n",
-    "print(result)\n"
+    "print(result)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#===============#\n",
+    "tools\n",
+    "\n",
+    "from langchain.agents import initialize_agent, load_tools\n",
+    "from langchain.llms import OpenAI\n",
+    "\n",
+    "# Инициализация языковой модели OpenAI\n",
+    "llm = OpenAI(api_key=\"your-openai-api-key\")\n",
+    "\n",
+    "# Загрузка инструментов для Google Search, Wikipedia и OpenAI\n",
+    "tools = load_tools([\"serpapi\", \"wikipedia\", \"llm\"], llm=llm)\n",
+    "\n",
+    "# Инициализация агента с использованием загруженных инструментов\n",
+    "agent = initialize_agent(tools, llm, agent=\"zero-shot-react-description\", verbose=True)\n",
+    "\n",
+    "# Примеры запросов к агенту\n",
+    "google_query = \"What is LangChain?\"\n",
+    "wikipedia_query = \"LangChain\"\n",
+    "openai_prompt = \"Explain the concept of LangChain.\"\n",
+    "\n",
+    "# Выполнение запросов к агенту\n",
+    "print(\"=== Google Search Result ===\")\n",
+    "google_result = agent.run(google_query)\n",
+    "print(google_result)\n",
+    "\n",
+    "print(\"\\n=== Wikipedia Summary ===\")\n",
+    "wikipedia_result = agent.run(wikipedia_query)\n",
+    "print(wikipedia_result)\n",
+    "\n",
+    "print(\"\\n=== OpenAI Response ===\")\n",
+    "openai_result = agent.run(openai_prompt)\n",
+    "print(openai_result)\n",
+    "\n"
    ]
   },
   {
