--- a/code_example.ipynb
+++ b/code_example.ipynb
@@ -100,6 +100,67 @@
     "# Использование агента для выполнения задачи\n",
     "agent.run(\"Какова высота Эвереста?\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Agents\n",
+    "from langchain.agents import initialize_agent, load_tools\n",
+    "from langchain.llms import OpenAI\n",
+    "from langchain.chains import SimpleChain\n",
+    "\n",
+    "# Установка API ключей\n",
+    "serpapi_api_key = \"your-serpapi-api-key\"\n",
+    "openai_api_key = \"your-openai-api-key\"\n",
+    "\n",
+    "# Инициализация языковой модели OpenAI\n",
+    "llm = OpenAI(api_key=openai_api_key)\n",
+    "\n",
+    "# Загрузка инструментов для Google Search, Wikipedia и OpenAI\n",
+    "tools = load_tools([\"serpapi\", \"wikipedia\", \"llm\"], llm=llm, serpapi_api_key=serpapi_api_key)\n",
+    "\n",
+    "# Создание цепочки\n",
+    "def google_search_step(query):\n",
+    "    return tools['serpapi'].run(query)\n",
+    "\n",
+    "def wikipedia_search_step(query):\n",
+    "    return tools['wikipedia'].run(query)\n",
+    "\n",
+    "def openai_generation_step(prompt):\n",
+    "    return tools['llm'].run(prompt)\n",
+    "\n",
+    "chain = SimpleChain(\n",
+    "    steps=[\n",
+    "        google_search_step,\n",
+    "        wikipedia_search_step,\n",
+    "        openai_generation_step\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "# Инициализация агента с использованием загруженных инструментов и цепочки\n",
+    "agent = initialize_agent([tools, chain], llm, agent=\"zero-shot-react-description\", verbose=True)\n",
+    "\n",
+    "# Примеры запросов к агенту\n",
+    "google_query = \"What is LangChain?\"\n",
+    "wikipedia_query = \"LangChain\"\n",
+    "openai_prompt = \"Explain the concept of LangChain.\"\n",
+    "\n",
+    "# Выполнение запросов к агенту\n",
+    "print(\"=== Google Search Result ===\")\n",
+    "google_result = agent.run(google_query)\n",
+    "print(google_result)\n",
+    "\n",
+    "print(\"\\n=== Wikipedia Summary ===\")\n",
+    "wikipedia_result = agent.run(wikipedia_query)\n",
+    "print(wikipedia_result)\n",
+    "\n",
+    "print(\"\\n=== OpenAI Response ===\")\n",
+    "openai_result = agent.run(openai_prompt)\n",
+    "print(openai_result)\n"
+   ]
   }
  ],
  "metadata": {
