--- a/Customer-support-bot.ipynb
+++ b/Customer-support-bot.ipynb
@@ -89,7 +89,7 @@
    ],
    "source": [
     "os.environ['LANGCHAIN_TRACING_V2'] = 'true'\n",
-    "os.environ['LANGCHAIN_PROJECT'] = 'Customer Support Bot Tutorial'\n",
+    "os.environ['LANGCHAIN_PROJECT'] = 'Customer Support Bot'\n",
     "load_dotenv()"
    ]
   },
